kustomize/red-portal/pr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: ns
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: user/app:latest
        ports:
          - containerPort: 8080
