kustomize/red-portal/pr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: ns
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 8080
