kustomize/red-portal/pr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/server-snippet: | # this is where the magic happens
      client_header_buffer_size 100k;
      large_client_header_buffers 4 100k;
spec:
  rules:
  - host: "pr.metaphorltd.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service
            port:
              number: 80
